7335: Fix signup form spacing in edit meal

--- a/app/assets/stylesheets/local/meals/signup.scss
+++ b/app/assets/stylesheets/local/meals/signup.scss
@@ -36,8 +36,17 @@
 
 form.gather-form.narrow-label-layout.finalize-form,
 form.gather-form.narrow-label-layout.meal-form {
+  // A single signup row.
   .signup-fields .form-group {
     margin-bottom: 0;
+
+    @media screen and (max-width: $screen-xs-max) {
+      margin-bottom: 5px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
 
   .meal_signups_household_id .select2-container .select2-selection__clear {
